--- a/css/style_numbersOrdinal.css
+++ b/css/style_numbersOrdinal.css
@@ -52,6 +52,7 @@ body{
   }
 /*Modificando botones centrales*/
 .btn_container{
+    position: relative;
     width: 62%;
     
     margin: auto;
@@ -80,7 +81,7 @@ body{
     
     
 }
-#btn_play{
+.btn_repeat{
     background-color: transparent;
     background-image:url("/src/img/btn_repeat.svg");
     background-repeat: no-repeat;
@@ -88,21 +89,21 @@ body{
 
     
 }
-#btn_showMe{
+.btn_showMe{
     background-color: transparent;
     background-image:url("/src/img/btn_show.svg");
     background-repeat: no-repeat;
      cursor:pointer;  
     
 }
-#btn_next{
+.btn_next{
     background-color: transparent;
     background-image:url("/src/img/btn_nextTo.svg");
     background-repeat: no-repeat;
      cursor:pointer;  
     
 }
-#btn_spanish{
+.btn_spanish{
     background-color: transparent;
     background-image:url("/src/img/btn_es.svg");
     background-repeat: no-repeat;
@@ -110,8 +111,11 @@ body{
     
 }
 .btn_controls{
-    width: 88px;
-    height: 88px;
+    width: 50px;
+    height: 50px;
+}
+.btn_controls img{
+    width: 100%;
 }
 .btn_controls object{
     z-index: -1;
@@ -165,7 +169,7 @@ body{
     /**
     */
 }
-#numberA{
+.num_random{
     height: 150px;
     width: 150px;
     position: absolute;
@@ -185,7 +189,7 @@ body{
    justify-content: center;  
    
 }
-#numberA:hover{
+.num_random:hover{
     border: 1px double red;
     color: wheat;
     background-color: rgba(128, 255, 0, 0.267);
@@ -200,7 +204,7 @@ body{
   100% {transform: rotate(180deg);}
   }
   /*Palabra español he inglés*/
-  #wordSpanish,#wordEnglish{
+  .wordSpanish,.wordEnglish{
    
     position: absolute;
     display: block;
@@ -211,7 +215,7 @@ body{
     padding: 1rem;
     cursor: pointer;
 }
-#wordEnglish:hover{
+.wordEnglish:hover{
     color: red;
   }
 
@@ -227,7 +231,7 @@ body{
   td, th {
     border: 1px solid #dddddd;
     text-align: left;
-    padding: 8px;
+    padding: 3px 5px 5px 3px;
   }
   
   tr:nth-child(even) {
