--- a/css/style_colors.css
+++ b/css/style_colors.css
@@ -16,7 +16,7 @@ body{
     position: relative;
     display: flex;
     width: 100%;
-    height: 100px;
+    height: 75px;
     border-radius: 13px;
 
 }
@@ -51,6 +51,9 @@ body{
    fill: red;
   }
 /*Modificando botones centrales*/
+.wrap_btn{
+    position: relative;
+}
 .btn_container{
     position: relative;
     width: 62%;
@@ -68,7 +71,7 @@ body{
     height: 100%;
     justify-content: space-between;
 }
-.btn_container > div > input{
+.btn_container  div  input{
    
     width: 195px;
     height: 86px;
@@ -80,6 +83,28 @@ body{
    
     
     
+}
+.btn_container  div{
+   
+    display: flex;
+    flex-direction: column;  
+    align-items: center;
+      
+    
+}
+.btn_container  div .btn_repeat_word{
+    background-color: pink;
+    width: 50px;
+    height: 20px;
+    text-align: center;
+    cursor: pointer;
+    border-radius: 3px;
+}
+.btn_container  div .btn_repeat_word:hover{
+    background-color: red;
+    width: 50px;
+    height: 20px;
+    text-align: center;
 }
 .btn_repeat{
     background-color: transparent;
@@ -110,6 +135,7 @@ body{
      cursor:pointer;  
     
 }
+
 .btn_controls{
     width: 50px;
     height: 50px;
@@ -121,23 +147,26 @@ body{
     z-index: -1;
 }
 
-/*BOTONES PEGABLES*/
-.btn_controls{
-    position: fixed;
-    
+/* btn_navigation BOTONES DE NAVAGACION*/
+.header {
+    display: flex;
+    width: 100%;
+    align-content: space-between;
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
 }
-.left{
-    top: 0;
-    bottom: 0;
-    margin: auto;
-    
+.btn_navigation{
+    width: 40px;
+    height: 40px;
+    padding: 10px 0px 10px 0px;
 }
-.right{
-    top: 0;
-    bottom: 0;
-    right: 0;
-    margin: auto;
-
+.btn_navigation a{
+    display: block;
+    width: 100%;
+}
+.btn_navigation a img{
+    width: 100%;
 }
 /*animaciones */
 .img_animation{
@@ -241,3 +270,111 @@ body{
     background-color: #dddddd;
     color: black;
   }
+  /* boton para seleccinar el rango a estudiar*/
+  .fromTo{
+    position: absolute;
+    display: flex;
+    top: 0;
+    left: 0;
+    margin-top: 10px;
+}
+  .fromTo_input_container{
+    display: flex;
+    border: 1px solid white;
+    border-radius: 5px;
+    padding: 3px;
+    margin-right: 10px;
+}
+.fromTo input{
+    width: 30px;
+    border-radius: 5px;
+    border: 1px solid transparent;
+    text-align: center;
+    padding: 0px 5px 0px 5px;
+}
+.fromTo button{
+    border: 1px solid transparent;
+    width: 50px;
+    border-radius: 5px;
+    text-align: center;
+    background-color: #1B75BB;
+    color: white;
+  }
+.fromTo button:hover{
+    background-color: blue;
+   
+  }
+  .fromTo p{
+    padding: 0px 10px 0px 10px;
+  }
+
+  @media only screen and (max-width: 600px) {
+    .wrap_btn {
+        width: 383px;
+        
+    }
+    .btn_container  div  input {
+        width: 50px;
+        height: 50px;
+        background-repeat: no-repeat;
+    }
+    .btn_container {
+        height: 53vh;
+        height: 53vh;
+    }
+    .btn_container_central {
+        display: flex;
+        flex-direction: column;
+        height: 40vh;
+        justify-content: space-between;
+    }
+    .num_random {
+        height: 25vw;
+        width:  25vw;
+        font-size: 5em;
+
+        
+    }
+    .img_animation {
+        height: 25vw;
+        width: 25vw;
+       
+    }
+    .fromTo {
+        position: absolute;
+        display: flex;
+        flex-direction: column;
+        top: 0;
+        left: 0;
+        margin-top: 10px;
+    }
+    .fromTo_input_container {
+        font-size: .7em;
+       
+    }
+    .fromTo input {
+        font-size: .7em;
+       
+    }
+    .campo {
+               font-size: .7em;
+               height: 49px;
+            }
+    .campo, .campo input {
+        font-size: 1.2em;
+    }
+    .wordSpanish, .wordEnglish {
+        font-size: .5em;
+        padding: 5px;
+        
+    }
+    table {
+        font-size: 0.8em;
+    }
+    td, th {
+        border: 1px solid #dddddd;
+        text-align: left;
+        padding: 2px;
+    }
+   
+}
