añadir faltanta a url

--- a/css/style_colors.css
+++ b/css/style_colors.css
@@ -183,7 +183,7 @@ body{
    
     
     background-repeat: no-repeat;
-    background-image: url(/src/img/image_cerebro.png);
+    background-image: url("/src/img/image_cerebro.png");
     background-position: center;
     background-size: auto;
     background-origin: content-box;
