--- a/css/style.css
+++ b/css/style.css
@@ -3,7 +3,7 @@
     padding: 0;
 }
 body{
-    background-image: url("src/img/brain.webp");
+    background-image: url("https://yanchapanta.github.io/idiomaEN/src/img/brain.webp");
 }
 .titleMain{
     color: white;
