--- a/css/style_colors.css
+++ b/css/style_colors.css
@@ -108,7 +108,7 @@ body{
 }
 .btn_repeat{
     background-color: transparent;
-    background-image:url("src/img/btn_repeat.svg");
+    background-image:url("https://yanchapanta.github.io/idiomaEN/src/img/btn_repeat.svg");
     background-repeat: no-repeat;
      cursor:pointer;  
 
@@ -116,21 +116,21 @@ body{
 }
 .btn_showMe{
     background-color: transparent;
-    background-image:url("src/img/btn_show.svg");
+    background-image:url("https://yanchapanta.github.io/idiomaEN/src/img/btn_show.svg");
     background-repeat: no-repeat;
      cursor:pointer;  
     
 }
 .btn_next{
     background-color: transparent;
-    background-image:url("src/img/btn_nextTo.svg");
+    background-image:url("https://yanchapanta.github.io/idiomaEN/src/img/btn_nextTo.svg");
     background-repeat: no-repeat;
      cursor:pointer;  
     
 }
 .btn_spanish{
     background-color: transparent;
-    background-image:url("src/img/btn_es.svg");
+    background-image:url("https://yanchapanta.github.io/idiomaEN/src/img/btn_es.svg");
     background-repeat: no-repeat;
      cursor:pointer;  
     
@@ -183,7 +183,7 @@ body{
    
     
     background-repeat: no-repeat;
-    background-image: url("src/img/image_cerebro.png");
+    background-image: url("https://yanchapanta.github.io/idiomaEN/src/img/image_cerebro.png");
     background-position: center;
     background-size: auto;
     background-origin: content-box;
