Actualización para ingresar los datos por json

--- a/css/style_colors.css
+++ b/css/style_colors.css
@@ -343,6 +343,10 @@ body{
     background-color: transparent;
 
 }
+.numberWorld{
+    font-size: 0.5em ;
+    opacity: 0.8;
+}
 
 .buttons button {
     margin: 0 7px;
